[package]
name = "vibeband"
version = "0.1.0"
edition = "2021"
description = "Ambient sound generator for your terminal"
license = "MIT"
repository = "https://github.com/daveliu/vibeband"
keywords = ["cli", "audio", "ambient", "tui", "soundscape"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
futures = "0.3"
hex = "0.4"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
rodio = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rustfft = "6"
tokio = { version = "1", features = ["full"] }
